Terminamos pagina principal
He añadido el video a la pagina principal y mejorado el diseño de la misma

--- a/front/src/components/Banner/index.css
+++ b/front/src/components/Banner/index.css
@@ -1,3 +1,5 @@
-.fondo{
-    background-image:url("../../images/bram-naus-n8Qb1ZAkK88-unsplash.jpg") ;
+.imagenFondo {
+    background-image: url("../../images/imagenFondo.jpg");
+    background-repeat: no-repeat;
+
 }
